# mybackend

./: .env  Cargo.toml  README.md  new.md
migrations/2022-10-26-081749_add_users/: up.sql
migrations/2022-11-25-035047_add_artists/: down.sql  up.sql
migrations/2022-11-25-035047_add_singers/: down.sql  up.sql
migrations/2022-11-25-035603_add_albums/: down.sql  up.sql
migrations/2022-11-25-035923_add_audios/: down.sql  up.sql
migrations/2022-11-25-040024_add_tracks/: down.sql  up.sql
migrations/2022-11-25-040311_add_favorite_singers/: down.sql  up.sql
migrations/2022-11-25-040346_add_favorite_albums/: down.sql  up.sql
migrations/2022-11-25-040346_add_favorites/: down.sql  up.sql
migrations/2022-11-25-040420_add_favorite_tracks/: down.sql  up.sql
migrations/2022-11-25-074000_add_comments/: down.sql  up.sql
migrations/2022-12-11-022729_add_favorite_artists/: down.sql  up.sql
migrations/2022-12-11-022947_user_track_history/: down.sql  up.sql
migrations/2022-12-11-023002_user_album_history/: down.sql  up.sql
src/: auth.rs  error.rs  main.rs  routes.rs  schema.rs  token.rs
src/album/: handler.rs  mod.rs  model.rs  request.rs  response.rs
src/artist/: handler.rs  model.rs  request.rs  response.rs
src/comment/: handler.rs  mod.rs  model.rs  request.rs  response.rs
src/favorite/: handler.rs  mod.rs  model.rs  response.rs
src/healthcheck/: api.rs  handler.rs
src/history/: handler.rs  mod.rs  model.rs  request.rs  response.rs
src/track/: model.rs
src/user/: api.rs  handler.rs  mod.rs  model.rs  request.rs  response.rs
