[package]
name = "mybackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.3"
actix-files = "0.6.2"
actix-multipart = "0.4.0"
actix-web = "4.2.1"
bcrypt = "0.13.0"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.9.1"
futures = "0.3.25"
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
log = "0.4.17"
r2d2 = "0.8.10"
sanitize-filename = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
